tests/cli/snapshots/help_snapshots_test__subcommand_add-tree_help.snap
---
source: tests/cli/help_snapshots_test.rs
expression: "help_output(&[subcommand, \"--help\"])"
---
Usage: xmind add-tree [OPTIONS] --parent <PARENT> <--dry-run|--apply> <WORKBOOK>

Arguments:
  <WORKBOOK>  

Options:
      --parent <PARENT>                
      --input <INPUT>                  
      --from-markdown <FROM_MARKDOWN>  
      --markdown-mode <MARKDOWN_MODE>  [possible values: heading, list, hybrid, auto]
      --dry-run                        
      --apply                          
      --backup                         
      --json                           
      --format <FORMAT>                [default: text] [possible values: text, json, compact-json, markdown, outline, assets]
      --fields <FIELDS>                
      --quiet                          
      --no-color                       
      --sheet <SHEET>                  
      --sheet-id <SHEET_ID>            
      --sheet-index <SHEET_INDEX>      
  -h, --help                           Print help
