tests/cli/snapshots/help_snapshots_test__subcommand_add_help.snap
---
source: tests/cli/help_snapshots_test.rs
assertion_line: 16
expression: "help_output(&[subcommand, \"--help\"])"
---
Usage: xmind add [OPTIONS] --parent <PARENT> --title <TITLE> <--dry-run|--apply> <WORKBOOK>

Arguments:
  <WORKBOOK>  

Options:
      --parent <PARENT>            
      --title <TITLE>              
      --position <POSITION>        
      --create-missing-path        
      --dry-run                    
      --apply                      
      --backup                     
      --json                       
      --format <FORMAT>            [default: text] [possible values: text, json, compact-json, markdown, outline]
      --fields <FIELDS>            
      --quiet                      
      --no-color                   
      --sheet <SHEET>              
      --sheet-id <SHEET_ID>        
      --sheet-index <SHEET_INDEX>  
  -h, --help                       Print help
