tests/cli/snapshots/help_snapshots_test__subcommand_backup_help.snap
---
source: tests/cli/help_snapshots_test.rs
expression: "help_output(&[subcommand, \"--help\"])"
---
Usage: xmind backup [OPTIONS] <WORKBOOK>

Arguments:
  <WORKBOOK>  

Options:
      --backup-dir <BACKUP_DIR>    
      --json                       
      --format <FORMAT>            [default: text] [possible values: text, json, compact-json, markdown, outline]
      --fields <FIELDS>            
      --quiet                      
      --no-color                   
      --sheet <SHEET>              
      --sheet-id <SHEET_ID>        
      --sheet-index <SHEET_INDEX>  
  -h, --help                       Print help
