tests/cli/snapshots/help_snapshots_test__subcommand_diff_help.snap
---
source: tests/cli/help_snapshots_test.rs
expression: "help_output(&[subcommand, \"--help\"])"
---
Usage: xmind diff [OPTIONS] <WORKBOOK>

Arguments:
  <WORKBOOK>  

Options:
      --json                       
      --format <FORMAT>            [default: text] [possible values: text, json, compact-json, markdown, outline, assets]
      --fields <FIELDS>            
      --quiet                      
      --no-color                   
      --sheet <SHEET>              
      --sheet-id <SHEET_ID>        
      --sheet-index <SHEET_INDEX>  
  -h, --help                       Print help
