tests/cli/snapshots/help_snapshots_test__subcommand_export_help.snap
---
source: tests/cli/help_snapshots_test.rs
expression: "help_output(&[subcommand, \"--help\"])"
---
Usage: xmind export [OPTIONS] <WORKBOOK>

Arguments:
  <WORKBOOK>  

Options:
      --output <OUTPUT>            
      --overwrite                  
      --json                       
      --format <FORMAT>            [default: text] [possible values: text, json, compact-json, markdown, outline, assets]
      --fields <FIELDS>            
      --quiet                      
      --no-color                   
      --sheet <SHEET>              
      --sheet-id <SHEET_ID>        
      --sheet-index <SHEET_INDEX>  
  -h, --help                       Print help
