tests/cli/snapshots/help_snapshots_test__subcommand_get_help.snap
---
source: tests/cli/help_snapshots_test.rs
expression: "help_output(&[subcommand, \"--help\"])"
---
Usage: xmind get [OPTIONS] --node <NODE> <WORKBOOK>

Arguments:
  <WORKBOOK>  

Options:
      --node <NODE>                
      --depth <DEPTH>              
      --include-assets             
      --json                       
      --format <FORMAT>            [default: text] [possible values: text, json, compact-json, markdown, outline]
      --fields <FIELDS>            
      --quiet                      
      --no-color                   
      --sheet <SHEET>              
      --sheet-id <SHEET_ID>        
      --sheet-index <SHEET_INDEX>  
  -h, --help                       Print help
