tests/cli/snapshots/help_snapshots_test__subcommand_import_help.snap
---
source: tests/cli/help_snapshots_test.rs
expression: "help_output(&[subcommand, \"--help\"])"
---
Usage: xmind import [OPTIONS] <--dry-run|--apply> <WORKBOOK>

Arguments:
  <WORKBOOK>  

Options:
      --dry-run                    
      --apply                      
      --backup                     
      --json                       
      --format <FORMAT>            [default: text] [possible values: text, json, compact-json, markdown, outline, assets]
      --fields <FIELDS>            
      --quiet                      
      --no-color                   
      --sheet <SHEET>              
      --sheet-id <SHEET_ID>        
      --sheet-index <SHEET_INDEX>  
  -h, --help                       Print help
