tests/cli/snapshots/help_snapshots_test__subcommand_inspect_help.snap
---
source: tests/cli/help_snapshots_test.rs
expression: "help_output(&[subcommand, \"--help\"])"
---
Summarize workbook metadata, sheets, and compatibility details.

Usage: xmind inspect [OPTIONS] <WORKBOOK>

Arguments:
  <WORKBOOK>  Path to the .xmind workbook

Options:
      --json                       Emit a JSON command envelope
      --format <FORMAT>            Select the human or machine-readable output format [default: text] [possible values: text, json, compact-json, markdown, outline, assets]
      --fields <FIELDS>            Limit JSON output to comma-separated field paths
      --quiet                      Suppress non-essential text output
      --no-color                   Disable ANSI color in text output
      --sheet <SHEET>              Select a sheet by title
      --sheet-id <SHEET_ID>        Select a sheet by stable id
      --sheet-index <SHEET_INDEX>  Select a sheet by zero-based index
  -h, --help                       Print help

Examples:
  xmind inspect roadmap.xmind
  xmind inspect roadmap.xmind --json
